--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -86,8 +86,7 @@
             "selling-price": "Enter Selling Price",
             "description": "Enter Description",
             "amount": "Enter Amount",
-            "date_from": "Date From",
-            "date_to": "Date To"
+            "date": "Enter Date"
         },
         "button": {
             "save": "Save",
