add and change some translations

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -92,7 +92,9 @@
             "save": "Save",
             "cancel": "Cancel",
             "show-customers": "Show customers",
-            "save-as-pdf": "Save as PDF"
+            "save-as-pdf": "Save as PDF",
+            "search": "Search",
+            "clear": "Clear"
         }
     },
     "text": {
@@ -106,6 +108,7 @@
             "customer": "Edit Customer",
             "order": "Edit Order"
         },
+        "search-option": "Search Options",
         "i18n": "Language Options",
         "general": "General",
         "module": "Modules",
