bugfixing, add orders report, update dashboard

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -67,6 +67,7 @@
         },
         "placeholder": {
             "email": "Enter Email",
+            "order-id": "Enter Order ID",
             "password": "Enter Password",
             "product": "Enter Product",
             "customer": "Enter Customer",
