--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -130,6 +130,11 @@
             "cost": "Koszt",
             "total": "Suma"
         },
+        "graph": {
+            "title": "Wykres Tygodnia",
+            "current": "Przychody z bieżącego tygodnia",
+            "last": "Przychody zeszłego tygodnia"
+        },
         "in-stock": "Na Magazynie",
         "sold-out": "Wyprzedane"
     },
